--- a/app/components/lookbook/ui/app/status_bar/status_bar_item/status_bar_item.css
+++ b/app/components/lookbook/ui/app/status_bar/status_bar_item/status_bar_item.css
@@ -32,7 +32,7 @@
     }
   }
 
-  &[data-theme="error"] {
+  &[data-theme="negative"] {
     .status-bar-item-content {
       color: var(--lb-color-content-negative);
     }
