Fix issues with nav item selection after page update

--- a/app/components/lookbook/ui/elements/nav/nav_item/nav_item.html.erb
+++ b/app/components/lookbook/ui/elements/nav/nav_item/nav_item.html.erb
@@ -2,9 +2,7 @@
   key: lookup_path,
   x: {
     data: "navItem({keywords: #{search_terms.to_json}, collection: #{collection?.to_json}})",
-    show: "!filteredOut",
-    ":aria-expanded": "expanded",
-    ":aria-selected": "selected",
+    bind: "bindings.root"
   },
   data: {url: url_path}
 ) do %>
