--- a/app/views/layouts/lookbook/application.html.erb
+++ b/app/views/layouts/lookbook/application.html.erb
@@ -6,7 +6,7 @@
           layout.with_header
 
           layout.with_previews_nav(@previews.tree)
-          layout.with_pages_nav(@pages.tree) if @pages.any?
+          layout.with_pages_nav(@pages.tree) if @pages.directory_exists?
 
           layout.with_main do
             tag.main { yield }
