--- a/app/components/lookbook/ui/app/status_bar/status_bar.html.erb
+++ b/app/components/lookbook/ui/app/status_bar/status_bar.html.erb
@@ -10,7 +10,7 @@
   </div>
   <div class="status-bar-section">
     <div class="status-bar-items">
-      <%= status_bar_item(tooltip: "Reset UI", theme: :action,  icon: :rotate_ccw, x: {"@click": "$dispatch('layout:reset')"}) %>
+      <%= status_bar_item(tooltip: "Reset UI", theme: :action,  icon: :rotate_ccw, x: {"@click": "$dispatch('ui:reset')"}) %>
     </div>
   </div>
   <div class="status-bar-section status-bar-notifications">
