--- a/app/views/lookbook/inspector/panels/_metadata.html.erb
+++ b/app/views/lookbook/inspector/panels/_metadata.html.erb
@@ -5,37 +5,11 @@
 </style>
 
 <div class="panel">
-  <%= lb_table do |table| %>
-    <% table.with_header do |header| %>
-      <% header.with_cell("Name", collapse: true) %>
-      <% header.with_cell("Value") %>
-    <% end %>
-
-    <% table.with_row do |row| %>
-      <% row.with_cell(collapse: true) do %>
-        <strong>UUID</strong>
-      <% end %>
-      <% row.with_cell do %>
-        <code><%= target.uuid %></code>
-      <% end %>
-    <% end %>
-
-    <% table.with_row do |row| %>
-      <% row.with_cell(collapse: true) do %>
-        <strong>Permalink</strong>
-      <% end %>
-      <% row.with_cell do %>
-        <code><%= link_to permalink_path(target.uuid), permalink_path(target.uuid) %></code>
-      <% end %>
-    <% end %>
-
-    <% table.with_row do |row| %>
-      <% row.with_cell(collapse: true) do %>
-        <strong>Preview file path</strong>
-      <% end %>
-      <% row.with_cell do %>
-        <code><%= path_relative_to_app(preview.file_path) %></code>
-      <% end %>
-    <% end %>
-  <% end %>
+  <%=
+    lb_metadata_table do |data|
+      data.with_entry("UUID", target.uuid)
+      data.with_entry("Permalink", link_to(permalink_path(target.uuid), permalink_path(target.uuid)))
+      data.with_entry("Preview file path", path_relative_to_app(preview.file_path))
+    end
+  %>
 </div>
