Handle edge-case nav mophing bug

--- a/app/components/lookbook/ui/app/router/router.html.erb
+++ b/app/components/lookbook/ui/app/router/router.html.erb
@@ -5,6 +5,7 @@
     "@click": "handleClick",
     "@lookbook:visit": "visit($event.detail.url)",
     "@lookbook:update": "updatePage",
+    "@error.window": "handleError",
     "@popstate.window": "visit(location, false)",
     "@visibilitychange.document": "handleVisibilityChange"
   }) do %>
