Fix viewport bg colour

--- a/app/components/lookbook/ui/elements/viewport/viewport.css
+++ b/app/components/lookbook/ui/elements/viewport/viewport.css
@@ -53,6 +53,7 @@
     grid-template-columns: 1fr;
     grid-template-rows: 1fr;
     outline: 1px solid var(--lb-color-surface-divider);
+    background-color: var(--lb-viewport-background-color);
   }
 
   &.resize-x {
