--- a/app/views/layouts/lookbook/embed.html.erb
+++ b/app/views/layouts/lookbook/embed.html.erb
@@ -1,6 +1,6 @@
 <% content_for :body do %>
   <%= render Lookbook::UI::Router.new do %>
-    <%= yield %>    
+    <%= tag.main { yield } %>
   <% end %>
 <% end %>
 
