--- a/app/views/lookbook/previews/embed.html.erb
+++ b/app/views/lookbook/previews/embed.html.erb
@@ -6,6 +6,7 @@
     panels: @panels,
     actions: @actions,
     preview_params: request.query_parameters,
+    preview_html: @preview_html,
     display_options: @inspector.dynamic_display_options,
     display_options_values: @display_options
   )
