--- a/app/views/lookbook/previews/inspect.html.erb
+++ b/app/views/lookbook/previews/inspect.html.erb
@@ -2,6 +2,7 @@
   render Lookbook::UI::PreviewInspector.new(
     preview: @preview,
     target: @target,
+    preview_html: @preview_html,
     preview_panels: @preview_panels,
     drawer_panels: @drawer_panels,
     display_options: @inspector.dynamic_display_options,
