--- a/public/lookbook-assets/app.css
+++ b/public/lookbook-assets/app.css
@@ -765,8 +765,7 @@ code {
 a {
   transition: color 0.25s ease;
 }
-router,
-main {
+router {
   display: contents;
 }
 [x-cloak] {
@@ -1070,6 +1069,9 @@ select {
 }
 [data-component="app"][data-status-bar="true"] {
     grid-template-rows: min-content 1fr min-content;
+  }
+[data-component="app"] main {
+    display: contents;
   }
 [data-component="color-scheme-switcher"] {
   display: block;
