Fix page 'scroll to element' behaviour when URL hash is present

--- a/app/components/lookbook/ui/pages/page/page.html.erb
+++ b/app/components/lookbook/ui/pages/page/page.html.erb
@@ -1,4 +1,9 @@
-<%= render component_tag(class: {"with-footer": footer?}) do %>
+<%= render component_tag(
+  class: {"with-footer": footer?},
+  x: {
+    data: "page",
+    "@page-load:complete.document": "scrollToTarget"
+  }) do %>
   <article class="page-content-wrapper">
     <div class="page-content">
       <% if header? %>
