--- a/public/lookbook-assets/css/lookbook.css
+++ b/public/lookbook-assets/css/lookbook.css
@@ -383,8 +383,20 @@ select {
   background-image: url("data:image/svg+xml,%3csvg viewBox='0 0 16 16' fill='white' xmlns='http://www.w3.org/2000/svg'%3e%3cpath d='M12.207 4.793a1 1 0 010 1.414l-5 5a1 1 0 01-1.414 0l-2-2a1 1 0 011.414-1.414L6.5 9.086l4.293-4.293a1 1 0 011.414 0z'/%3e%3c/svg%3e");
 }
 
+@media (forced-colors: active) {
+  [type="checkbox"]:checked {
+    appearance: auto;
+  }
+}
+
 [type="radio"]:checked {
   background-image: url("data:image/svg+xml,%3csvg viewBox='0 0 16 16' fill='white' xmlns='http://www.w3.org/2000/svg'%3e%3ccircle cx='8' cy='8' r='3'/%3e%3c/svg%3e");
+}
+
+@media (forced-colors: active) {
+  [type="radio"]:checked {
+    appearance: auto;
+  }
 }
 
 [type="checkbox"]:checked:hover, [type="checkbox"]:checked:focus, [type="radio"]:checked:hover, [type="radio"]:checked:focus {
@@ -399,6 +411,12 @@ select {
   background-repeat: no-repeat;
   background-size: 100% 100%;
   border-color: #0000;
+}
+
+@media (forced-colors: active) {
+  [type="checkbox"]:indeterminate {
+    appearance: auto;
+  }
 }
 
 [type="checkbox"]:indeterminate:hover, [type="checkbox"]:indeterminate:focus {
@@ -2342,6 +2360,10 @@ select.compact {
   height: 100%;
 }
 
+.h-max {
+  height: max-content;
+}
+
 .h-screen {
   height: 100vh;
 }
@@ -2356,6 +2378,10 @@ select.compact {
 
 .min-h-\[calc\(100vh_-_400px\)\] {
   min-height: calc(100vh - 400px);
+}
+
+.min-h-full {
+  min-height: 100%;
 }
 
 .w-11 {
